internal-lb/httpbin-service.yaml
# web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - name: host1
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpbin
  type: ClusterIP
